# stock-trader-env

./: README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Docker file  app.py  environment.py  requirements.txt
