[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-trader-env"
version = "1.0.0"
description = "Stock Trader OpenEnv — LLM-powered RL trading environment"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_trader_env*"]
